deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taxi
  labels:
    app.kubernetes.io/name: taxi
    app.kubernetes.io/version: 0.0.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: taxi
      app.kubernetes.io/version: 0.0.1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: taxi
        app.kubernetes.io/version: 0.0.1
    spec:
      containers:
      - name: taxi
        image: image-registry.openshift-image-registry.svc.cluster.local:5000/test-cd/taxi
        imagePullPolicy: Always
        volumeMounts:
        - name: web-files
          mountPath: /usr/share/booktaxi
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
      volumes:
      - name: web-files
        configMap:
          name: www-files
